# privacy-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-setup-steps.yml
.github/workflows/: ci.yml
pii_parser/: __init__.py  __main__.py  api.py  cli_model.py  detectors.py  hybrid.py  labels.py  model_parser.py  postprocess.py  spans.py
tests/: eval_samples.py  test_hybrid.py  test_model.py
